fixed error when update bulk component
