# controller/admin/product_controller.go
@@ -27,8 +27,8 @@ func (controller *ProductController) Route(app *fiber.App) {
 
 	product := app.Group("/api/admin/products")
 	product.Post("/:id", middleware.AuthMiddleware(controller.UserService), controller.Create)
-	product.Put("/:id", middleware.AuthMiddleware(controller.UserService), controller.Update)
 	product.Put("/change-component", middleware.AuthMiddleware(controller.UserService), controller.UpdateComponent)
+	product.Put("/:id", middleware.AuthMiddleware(controller.UserService), controller.Update)
 	product.Delete("/:id", middleware.AuthMiddleware(controller.UserService), controller.Delete)
 	product.Get("/", middleware.AuthMiddleware(controller.UserService), controller.Search)
 	product.Get("/browse-product-sku", middleware.AuthMiddleware(controller.UserService), controller.BrowseProductSku)
@@ -106,8 +106,7 @@ func (controller *ProductController) Update(ctx *fiber.Ctx) error {
 // @Tags        Product
 // @Accept      json
 // @Produce     json
-// @Param       oldProductSkuId query string  true "GUID"
-// @Param       newProductSkuId query string  true "GUID"
+// @Param       request body request.ChangeComponent true " "
 // @Success     200  {object}  response.WebResponse
 // @Failure     400  {object}  response.WebResponse
 // @Security		ApiKeyAuth
@@ -115,19 +114,19 @@ func (controller *ProductController) Update(ctx *fiber.Ctx) error {
 // @name 				Authorization
 // @Router       /api/admin/products/change-component [put]
 func (controller *ProductController) UpdateComponent(ctx *fiber.Ctx) error {
-
 	currentUserId := helpers.ParseUint(ctx.Locals("userId").(string))
 
-	oldProductSkuId := helpers.ParseUUID(ctx.Params("oldProductSkuId"))
-	newProductSkuId := helpers.ParseUUID(ctx.Params("newProductSkuId"))
+	var payload request.ChangeComponent
+	err := ctx.BodyParser(&payload)
+	exception.PanicIfNeeded(err)
 
-	logger.LogInfo(fmt.Sprintf("[Admin %d] Mencoba mengupdate komponent pada semua produk bundle", currentUserId))
+	logger.LogInfo(fmt.Sprintf("[Admin %d] mengubah komponent pada semua produk bundle", currentUserId))
 
-	result := controller.ProductService.ChangeComponent(currentUserId, oldProductSkuId, newProductSkuId)
+	result := controller.ProductService.ChangeComponent(currentUserId, payload)
 
-	logger.LogInfo(fmt.Sprintf("[Admin %d] Berhasil mengupdate komponent pada semua produk bundle", currentUserId))
+	logger.LogInfo(fmt.Sprintf("[Admin %d] berhasil mengubah komponent pada semua produk bundle", currentUserId))
 
-	return ctx.JSON(response.NewWebResponse(result))
+	return ctx.JSON(response.NewWebResponse(nil, result))
 }
 
 // @Summary      Delete product
