# docs/admin/swagger.json
@@ -1613,18 +1613,13 @@
                 "summary": "change component (for product bundle)",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "GUID",
-                        "name": "oldProductSkuId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "GUID",
-                        "name": "newProductSkuId",
-                        "in": "query",
-                        "required": true
+                        "description": " ",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ChangeComponent"
+                        }
                     }
                 ],
                 "responses": {
@@ -2103,6 +2098,17 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.ChangeComponent": {
+            "type": "object",
+            "properties": {
+                "newProductSkuId": {
+                    "type": "string"
+                },
+                "oldProductSkuId": {
                     "type": "string"
                 }
             }
